# monai_docker

./: .gitignore  Dockerfile  docker-compose.debug.yml  docker-compose.yml  pyproject.toml
