[tool.poetry]
name = "monai"
version = "0.1.0"
description = ""
authors = ["Rafael Dias <rafaelagd@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = ">=1.9"
pytorch-ignite = "0.4.11"
gdown = ">=4.7.3"
scipy = {version = ">=1.12.0", markers = "python_version >= \"3.9\""}
itk = ">=5.2"
nibabel = "^5.3.2"
pillow = "!=8.3.0"
tensorboard = ">=2.12.0"
scikit-image = ">=0.19.0"
tqdm = ">=4.47.0"
lmdb = "^1.5.1"
flake8 = ">=3.8.1"
flake8-bugbear = "<=24.2.6"
flake8-comprehensions = "^3.16.0"
mccabe = "^0.7.0"
pep8-naming = "^0.14.1"
pycodestyle = "^2.12.1"
pyflakes = "^3.2.0"
black = ">=22.12"
isort = ">=5.1"
pytype = {version = ">=2020.6.1", markers = "platform_system != \"Windows\""}
types-setuptools = "^75.6.0.20241126"
ninja = "^1.11.1.2"
torchvision = "^0.20.1"
psutil = "^6.1.0"
cucim-cu12 = {markers = "platform_system == \"Linux\" and python_version >= \"3.9\" and python_version <= \"3.10\"", version = "^24.10.0"}
openslide-python = "^1.4.1"
imagecodecs = {markers = "platform_system == \"Linux\" or platform_system == \"Darwin\"", version = "^2024.9.22"}
tifffile = {markers = "platform_system == \"Linux\" or platform_system == \"Darwin\"", version = "^2024.9.20"}
pandas = "^2.2.3"
requests = "^2.32.3"
einops = "^0.8.0"
transformers = {version = ">=4.36.0,<4.41.0", markers = "python_version <= \"3.10\""}
mlflow = ">=2.12.2"
clearml = ">=1.10.0rc0"
matplotlib = ">=3.6.3"
tensorboardx = "^2.6.2.2"
types-pyyaml = "^6.0.12.20240917"
pyyaml = "^6.0.2"
fire = "^0.7.0"
jsonschema = "^4.23.0"
pynrrd = "^1.1.1"
pre-commit = "^4.0.1"
pydicom = "^3.0.1"
h5py = "^3.12.1"
nni = {version = "2.10.1", markers = "platform_system == \"Linux\" and (platform_machine != \"arm\" and platform_machine != \"aarch\")"}
optuna = "^4.1.0"
onnx = ">=1.13.0"
onnxruntime = {markers = "python_version <= \"3.10\"", version = "^1.20.1"}
typeguard = "<3"
filelock = "<3.12.0"
zarr = "^2.18.3"
lpips = "0.1.4"
nvidia-ml-py = "^12.560.30"
huggingface-hub = "^0.26.3"
pyamg = ">=5.0.0"
segment-anything = {git = "https://github.com/facebookresearch/segment-anything.git", rev = "6fdee8f2727f4506cfbbe553e23b895e27956588"}
onnx-graphsurgeon = "^0.5.2"
polygraphy = "^0.49.9"
parameterized = "^0.9.0"
numpy = ">=1.24,<2.0"
setuptools = {version = ">=70.2.0", markers = "python_version >= \"3.12\""}
coverage = ">=5.5"
packaging = "^24.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
taskipy = "^1.14.0"
isort = "^5.13.2"
black = "^24.10.0"
mypy = "^1.13.0"
ruff = "^0.7.4"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
